hphp/test/slow/expr-tree-pipe-capture-error-3.php.expectf

Fatal error: Cannot use unstable feature: `capture_pipe_variables` in %s/expr-tree-pipe-capture-error-3.php on line 5
